<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.chotoxautinh</groupId>
	<artifactId>ffmpeg-app</artifactId>
	<version>0.0.1</version>
	<name>DogyMPEGApp</name>
	<organization>
		<name>Dogy</name>
	</organization>
	<properties>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <javafx.version>21</javafx.version>
        <maven.compiler.source>21</maven.compiler.source>
    	<maven.compiler.target>21</maven.compiler.target>
    	<main.class>com.chotoxautinh.Main</main.class>
    	<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
	  </properties>
	
	<dependencies>
		<!-- JavaFX Modules -->
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-controls</artifactId>
	        <version>${javafx.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-fxml</artifactId>
	        <version>${javafx.version}</version>
	    </dependency>
	    
		<!-- https://mvnrepository.com/artifact/org.bytedeco/ffmpeg-platform -->
		<dependency>
		    <groupId>org.bytedeco</groupId>
		    <artifactId>ffmpeg-platform</artifactId>
		    <version>7.1-1.5.11</version>
		</dependency>
	</dependencies>
	
	<build>
		<finalName>DogyMPEGApp</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <includeScope>compile</includeScope>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
	</build>
</project>